feat(Table class): Table abstraction to perform query operations.
Following features were added.

Create Table, Insert rows, read by key, read by value, read with limit.